--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,5 +7,6 @@
       <input [(ngModel)]="hero.name" placeholder="Name"/>
     </label>
   </div>
+  <button (click)="goBack()">Back</button>
 
 </div>
