--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,6 +7,7 @@
       <input [(ngModel)]="hero.name" placeholder="Name"/>
     </label>
   </div>
+  <button (click)="save()">Save</button>
   <button (click)="goBack()">Back</button>
 
 </div>
